--- a/.github/workflows/fastapi.yml
+++ b/.github/workflows/fastapi.yml
@@ -33,4 +33,17 @@ jobs:
         run: |
           pipenv install -r requirements.txt
           pipenv run pytest -v
+        
+
+        name: Checkout code
+        uses: actions/checkout@v2
+    -   name: Install AWS CLI
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y awscli
+      - name: Push data docs to S3 and enable static website hosting
+        run: |
+          aws s3 sync great_expectations_new/great_expectations/uncommitted/data_docs/local_site s3://damg-test --delete
+          aws s3 website s3://damg-test --index-document index.html
+        
 
